kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-cloud-ingress
  namespace: multi-cloud
spec:
  ingressClassName: nginx
  rules:
    - host: multi-cloud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
